force-app/main/default/objects/Opportunity_Durations__c/Opportunity_Durations__c.object-meta.xml
<CustomObject>
    <description>Testing</description>
    <label>Opportunity Durations</label>
    <nameField>
        <displayFormat>OD-{0000000}</displayFormat>
        <label>Opportunity Durations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Durations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>