force-app/main/default/objects/Opportunity_Durations__c/fields/Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Business_Days__c</fullName>
    <description>Business Days</description>
    <formula>Business_Hours__c / 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Business Days an Opportunity spent in the previous Stage.</inlineHelpText>
    <label>Business Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>