force-app/main/default/objects/Opportunity_Durations__c/fields/Business_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Business_Minutes__c</fullName>
    <description>Business Minutes</description>
    <formula>Business_Hours__c * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Business Minutes an Opportunity spent in the previous Stage.</inlineHelpText>
    <label>Business Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>