force-app/main/default/objects/Opportunity_Durations__c/fields/Business_Week__c.field-meta.xml
<CustomField>
    <fullName>Business_Week__c</fullName>
    <description>Number of Business Days</description>
    <formula>Business_Days__c / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of Business Days an Opportunity spent in the previous Stage.</inlineHelpText>
    <label>Business Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>