force-app/main/default/objects/Opportunity_Durations__c/fields/Calculated_Business_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Business_Seconds__c</fullName>
    <description>This field shows the Business Seconds that an opportunity spent in a given stage (ie 1-6). [ Business seconds refers to seconds during business hours only.}</description>
    <label>Calculated Business Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>