force-app/main/default/objects/Opportunity_Durations__c/fields/Calculated_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Seconds__c</fullName>
    <description>Duration of time [in seconds] an opportunity spends in a given stage.</description>
    <formula>(Until__c - From__c) * 32400</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>