force-app/main/default/objects/Opportunity_Durations__c/fields/Five_Minutes_To_One_Day__c.field-meta.xml
<CustomField>
    <fullName>Five_Minutes_To_One_Day__c</fullName>
    <description>Business Days between 5 minutes and 1 day.</description>
    <formula>AND(Business_Minutes__c &gt;5,Business_Days__c &lt;= 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The time spent in the previous stage is between 5 minutes and 1 day.</inlineHelpText>
    <label>5 minutes to 1 day</label>
    <type>Checkbox</type>
</CustomField>