force-app/main/default/objects/Opportunity_Durations__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>This field notes the time that an opportunity was moved to the current stage.</description>
    <label>From</label>
    <type>DateTime</type>
</CustomField>