force-app/main/default/objects/Opportunity_Durations__c/fields/Greater_than_1_week__c.field-meta.xml
<CustomField>
    <fullName>Greater_than_1_week__c</fullName>
    <description>Time spent in the previous stage was greater than 1 week.</description>
    <formula>Business_Week__c &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The time spent in the previous stage was greater than one week.</inlineHelpText>
    <label>Greater than 1 week</label>
    <type>Checkbox</type>
</CustomField>