force-app/main/default/objects/Opportunity_Durations__c/fields/Greater_than_1_Week_Count__c.field-meta.xml
<CustomField>
    <fullName>Greater_than_1_Week_Count__c</fullName>
    <description>Greater than 1 week count.</description>
    <formula>If(Business_Week__c &gt; 1,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Greater than 1 week count.</inlineHelpText>
    <label>Greater than 1 Week Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>