force-app/main/default/objects/Opportunity_Durations__c/fields/Greater_than_1_Week_Value__c.field-meta.xml
<CustomField>
    <fullName>Greater_than_1_Week_Value__c</fullName>
    <description>Number of days, if the duration is greater than 1 week.</description>
    <formula>If(Business_Week__c &gt;1,Business_Days__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of Business Days, if the Duration is Greater than 1 Week.</inlineHelpText>
    <label>Greater than 1 Week Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>