force-app/main/default/objects/Opportunity_Durations__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Owner field from Opp</description>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>