force-app/main/default/objects/Opportunity_Durations__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Durations</relationshipLabel>
    <relationshipName>Opportunity_Durations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>