force-app/main/default/objects/Opportunity_Durations__c/fields/Skipped_Stage__c.field-meta.xml
<CustomField>
    <fullName>Skipped_Stage__c</fullName>
    <description>Formula field to determine if a given opportunity skipped a stage. Takes the Current Stage and subtracts the previous stage, if the number is greater than 1, the opportunity skipped multiple levels.</description>
    <formula>To_Stage_Number__c - From_Stage_Number__c &gt; 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skipped Stage</label>
    <type>Checkbox</type>
</CustomField>