force-app/main/default/objects/Opportunity_Durations__c/fields/Stage_has_Changed__c.field-meta.xml
<CustomField>
    <fullName>Stage_has_Changed__c</fullName>
    <description>Is the Previous Stage the same as the Current Stage.</description>
    <formula>From_Stage_Number__c = To_Stage_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Has the Opportunity Stage Name changed.</inlineHelpText>
    <label>Stage has Changed</label>
    <type>Checkbox</type>
</CustomField>