force-app/main/default/objects/Opportunity_Durations__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <description>Stage that the opportunity moved from when the Duration record was created. This is populated from Cronsights. 

API Name must remain StageName.</description>
    <inlineHelpText>What was the previous stage before it was changed?</inlineHelpText>
    <label>From Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>