force-app/main/default/objects/Opportunity_Durations__c/fields/To_Stage__c.field-meta.xml
<CustomField>
    <fullName>To_Stage__c</fullName>
    <description>Field to track the current stage of an opportunity.</description>
    <inlineHelpText>When the stage changed, what did it change to? The person listed as Created By is who changed the status.</inlineHelpText>
    <label>To Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>