force-app/main/default/objects/Opportunity_Durations__c/fields/To_Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Stage_Number__c</fullName>
    <description>Field to hold the Number associated with the current stage of an opportunity. This is essential to the formula that determines when an opportunity jumps multiple stages.</description>
    <formula>VALUE(LEFT( To_Stage__c ,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Stage Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>