force-app/main/default/objects/Opportunity_Durations__c/fields/Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Days__c</fullName>
    <description>Total Days</description>
    <formula>Total_Hours__c / 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of Calendar Days an Opportunity spent in the Previous Stage.</inlineHelpText>
    <label>Total Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>