force-app/main/default/objects/Opportunity_Durations__c/fields/Total_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes__c</fullName>
    <description>Total Minutes</description>
    <formula>Total_Hours__c * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total minutes an Opportunity spent in the previous Stage.</inlineHelpText>
    <label>Total Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>