force-app/main/default/objects/Opportunity_Durations__c/fields/Total_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Total_Weeks__c</fullName>
    <description>Total Weeks</description>
    <formula>Total_Days__c / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total weeks an Opportunity spent in the previous Stage.</inlineHelpText>
    <label>Total Weeks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>