force-app/main/default/objects/Opportunity_Durations__c/fields/X0_5_Minutes_Count__c.field-meta.xml
<CustomField>
    <fullName>X0_5_Minutes_Count__c</fullName>
    <description>0-5 Minutes Count</description>
    <formula>if(Business_Minutes__c &lt; 5,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>0-5 Minutes Count</inlineHelpText>
    <label>0-5 Minutes Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>