force-app/main/default/objects/Opportunity_Durations__c/fields/X0_5_Minutes_Value__c.field-meta.xml
<CustomField>
    <fullName>X0_5_Minutes_Value__c</fullName>
    <description>The number of minutes, if less than 5.</description>
    <formula>If(Business_Minutes__c &lt; 5,Business_Minutes__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of Business Minutes, if the Duration is less than 5 minutes.</inlineHelpText>
    <label>0-5 Minutes Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>