force-app/main/default/objects/Opportunity_Durations__c/fields/X1_Day_to_1_Week__c.field-meta.xml
<CustomField>
    <fullName>X1_Day_to_1_Week__c</fullName>
    <description>Previous Stage time was between 1 day and 1 week.</description>
    <formula>AND(Business_Days__c &gt;1, Business_Week__c &lt;= 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The time spent in the previous Stage was between 1 day and 1 week.</inlineHelpText>
    <label>1 Day to 1 Week</label>
    <type>Checkbox</type>
</CustomField>