force-app/main/default/objects/Opportunity_Durations__c/fields/X1_Day_to_1_Week_Count__c.field-meta.xml
<CustomField>
    <fullName>X1_Day_to_1_Week_Count__c</fullName>
    <description>1 Day to 1 Week Count.</description>
    <formula>If(AND(Business_Days__c &gt;1, Business_Week__c &lt;= 1),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 Day to 1 Week Count.</inlineHelpText>
    <label>1 Day to 1 Week Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>