force-app/main/default/objects/Opportunity_Durations__c/fields/X1_Day_to_1_Week_Value__c.field-meta.xml
<CustomField>
    <fullName>X1_Day_to_1_Week_Value__c</fullName>
    <description>The number of Business Days (from 1 day to 1 week)</description>
    <formula>if(and(Business_Days__c &gt; 1, Business_Week__c &lt;= 1),Business_Days__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of Business Days, if the Opportunity Duration is between 1 Day and 1 Week.</inlineHelpText>
    <label>1 Day to 1 Week Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>