force-app/main/default/objects/Opportunity_Durations__c/fields/X5_Minutes_to_1_Day_Count__c.field-meta.xml
<CustomField>
    <fullName>X5_Minutes_to_1_Day_Count__c</fullName>
    <description>5 Mintues to 1 Day Count.</description>
    <formula>If(AND(Business_Minutes__c &gt;5,Business_Days__c &lt;= 1),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>5 Minutes to 1 Day Count.</inlineHelpText>
    <label>5 Minutes to 1 Day Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>