force-app/main/default/objects/Opportunity_Durations__c/fields/X5_Minutes_to_1_Day_Value__c.field-meta.xml
<CustomField>
    <fullName>X5_Minutes_to_1_Day_Value__c</fullName>
    <description>The Opportunity Stage Duration if the duration is between 5 minutes and 1 day.</description>
    <formula>If(and(Business_Minutes__c&gt;5, Business_Days__c &lt;=1),Business_Minutes__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Opportunity Stage Duration, if the Duration is between 5 Minutes and 1 Day.</inlineHelpText>
    <label>5 Minutes to 1 Day Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>