force-app/main/default/objects/Opportunity_Durations__c/fields/Zero_To_Five_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Zero_To_Five_Minutes__c</fullName>
    <description>Business Minutes beween 0 and 5 minutes.</description>
    <formula>Business_Minutes__c &lt; 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of business hours are between 0 and 5 minutes.</inlineHelpText>
    <label>0-5 Minutes</label>
    <type>Checkbox</type>
</CustomField>